# CSEC201_Project

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt  fuzzer.py
.hashdll/: hash.cpp  hash.h
include/: commands.h  hash.h  hashes.h  linkedlist.h
old/: linkedlist.c  linkedlist.h
src/: commands.c  hash.cpp  hashes.c  hashmain.c  linkedlist.c  main.c
